fix: remove overflow carTrack, update size grid columns,add padding

--- a/src/app/garage/components/cars-card/cars-card.component.scss
+++ b/src/app/garage/components/cars-card/cars-card.component.scss
@@ -1,7 +1,7 @@
 .cars-card {
   margin: 5px 0;
   display: grid;
-  grid-template-columns: 0.1fr 1fr;
+  grid-template-columns: 0.08fr 1fr;
   grid-template-rows: 80px;
   border-bottom: 4px dashed black;
   &-buttons {
@@ -14,8 +14,10 @@
   &-track {
     position: relative;
     align-self: end;
+    overflow-x: hidden;
     &-name {
       position: absolute;
+      padding-left: 10px;
       text-transform: uppercase;
       text-shadow: 1px 2px 2px #cecece;
     }
@@ -23,7 +25,6 @@
 }
 .car {
   position: relative;
-  transform: translateX(0vw);
   transition: transform 0.3s linear;
   filter: drop-shadow(1px 1px 3px white);
 }
